add_library(libadc OBJECT
        acto-adc.cc
        actp-adc.cc
        adaptive-receiver.cc
        adaptive-receiver.h
        adc.cc
        adc.h
        consrcvr.cc
        estimator.cc
        estimator.h
        expavg-est.cc
        hb-adc.cc
        ms-adc.cc
        null-estimator.cc
        param-adc.cc
        pointsample-est.cc
        resv.cc
        resv.h
        sa.cc
        sa.h
        salink.cc
        salink.h
        simple-intserv-sched.cc
        tbf.cc
        tbf.h
        timewindow-est.cc
        ump.cc
        ump.h
        )
target_include_directories(libadc PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        $<TARGET_PROPERTY:libcommon,INTERFACE_INCLUDE_DIRECTORIES>
        )
