add_library(libmobile OBJECT
        antenna.cc
        antenna.h
        dem.cc
        dem.h
        dumb-agent.cc
        dumb-agent.h
        energy-model.cc
        energy-model.h
        god.cc
        god.h
        gridkeeper.cc
        gridkeeper.h
        mip-reg.cc
        mip.cc
        mip.h
        modulation.cc
        modulation.h
        nakagami.cc
        nakagami.h
        omni-antenna.cc
        omni-antenna.h
        propagation.cc
        propagation.h
        shadowing-vis.cc
        shadowing-vis.h
        shadowing.cc
        shadowing.h
        topography.cc
        topography.h
        tworayground.cc
        tworayground.h
    )
target_include_directories(libmobile PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        $<TARGET_PROPERTY:libcommon,INTERFACE_INCLUDE_DIRECTORIES>
        $<TARGET_PROPERTY:libtools,INTERFACE_INCLUDE_DIRECTORIES>
    )
target_compile_definitions(libmobile PUBLIC WITH_MOBILE)
