add_library(libqueue OBJECT
        cbq.cc
        delayer.cc
        delayer.h
        delaymodel.cc
        delaymodel.h
        demarker.cc
        demarker.h
        drop-tail.cc
        drop-tail.h
        drr.cc
        dsr-priqueue.cc
        dsr-priqueue.h
        errmodel.cc
        errmodel.h
        fec.cc
        fec.h
        fq.cc
        gk.cc
        gk.h
        jobs.cc
        jobs.h
        marker.cc
        marker.h
        pi.cc
        pi.h
        priqueue.cc
        priqueue.h
        queue.cc
        queue.h
        red-pd.cc
        red-pd.h
        red.cc
        red.h
        rem.cc
        rem.h
        rio.cc
        rio.h
        rtqueue.cc
        rtqueue.h
        semantic-packetqueue.cc
        semantic-packetqueue.h
        semantic-red.cc
        semantic-rio.cc
        sfq.cc
        srr.cc
        vq.cc
        vq.h
        wss.h
        priority.h
        priority.cc
    )
target_compile_features(libqueue PUBLIC cxx_std_17)
target_include_directories(libqueue PUBLIC
        ${CMAKE_CURRENT_SOURCE_DIR}
        $<TARGET_PROPERTY:libcommon,INTERFACE_INCLUDE_DIRECTORIES>
        $<TARGET_PROPERTY:liblink,INTERFACE_INCLUDE_DIRECTORIES>
        )
if(WITH_PGM)
    target_link_libraries(libqueue PRIVATE libpgm)
endif()
